app/components/Card/Card.module.css
/*
 * Copyright 2024 Uppsala University Library
 *
 * This file is part of DiVA Client.
 *
 *     DiVA Client is free software: you can redistribute it and/or modify
 *     it under the terms of the GNU General Public License as published by
 *     the Free Software Foundation, either version 3 of the License, or
 *     (at your option) any later version.
 *
 *     DiVA Client is distributed in the hope that it will be useful,
 *     but WITHOUT ANY WARRANTY; without even the implied warranty of
 *     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 *     GNU General Public License for more details.
 *
 *     You should have received a copy of the GNU General Public License
 */

.card {
  position: relative;
  transition: background-color 0.2s;
  transition: border-color 0.2s;
  border-radius: var(--border-radius) var(--border-radius) 0 0;

  &[data-boxed] {
    border-left: 3px solid var(--color-card-dark);

    &:has([aria-invalid='true']) {
      border-color: var(--color-error-main);
    }

    &:has(input:focus),
    &:has(select:focus),
    &:has(textarea:focus),
    &:has(> .card-header input:hover),
    &:has(> .card-header [data-action-button]:hover),
    &:has(> .card-header [data-action-button]:focus) {
      border-color: var(--color-link-selected);
      background-color: var(--color-card);
    }

    &:has(> .card-header [data-action-button='delete']:hover),
    &:has(> .card-header [data-action-button='delete']:focus) {
      background-color: var(--color-alert-error-bg);
      border-color: var(--color-error-main);
    }
  }
}

.card-content[data-boxed] {
  padding: var(--gap);

  &[data-alert='true'] {
    border-radius: var(--border-radius);
    background-color: rgb(255 236 240);
  }
}

.card-header {
  display: grid;
  grid-template-columns: 1fr auto auto;
  grid-template-areas: 'title attributes actions';
  align-items: center;
  width: 100%;

  &[data-boxed] {
    padding: var(--gap-s) var(--gap);
    border-radius: var(--border-radius) var(--border-radius)
      var(--border-radius) 0;
    background-color: var(--color-card-dark);
  }

  &[data-alert='true'] {
    background-color: rgb(210 175 182);
  }

  .title {
    grid-area: title;
  }

  .attributes {
    grid-area: attributes;
    justify-self: end;
  }

  .actions {
    grid-area: actions;
    justify-self: end;
  }
}

@media (width < 600px) {
  .card-header {
    grid-template-columns: 1fr auto;
    grid-template-areas:
      'title actions'
      'attributes attributes';

    .attributes {
      justify-self: stretch;
    }
  }
}

.card-title {
  max-width: 75ch;
  margin-right: auto;
  display: flex;
  align-items: center;
  gap: var(--gap);
}

:target > .card {
  border-color: var(--color-link-selected);

  > .card-header {
    color: var(--color-link-selected);
  }
}

